fixed issue with form popup not expanding full width on smaller screen sizes

--- a/src/scss/components/_tasks.scss
+++ b/src/scss/components/_tasks.scss
@@ -144,6 +144,10 @@
     display: none;
   }
 
+  .form-bg {
+    max-width: calc(100% - 200px);
+  }
+
   .task-list {
     .task,
     .task-headers {
